clusters/apps/grafana/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    name: grafana
  ports:
  - port: 3000
    name: http
    targetPort: http
    protocol: TCP
