clusters/apps/grafana/grafana-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: grafana
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`grafana.local.wololoaeyoyo.com`)
      services:
        - name: grafana 
          port: 3000
  tls:
    secretName: local-wololoaeyoyo-com-tls
